Revision history for Perl extension AnyEvent.

	- take advantage of the Guard module if it exists.

4.33 Fri Nov 21 02:35:40 CET 2008
	- AnyEvent::Strict did errornously flag a fileno of 0 as
          illegal.
	- reduce memory usage and slightly speed up the pure perl backend
          by only storing the file descriptor, not the file handle.
        - add missing autocork method to AnyEvent::Handle (reported
          by Adam Rosenstein).
        - AnyEvent::DNS->resolve errornously documented an $rcode result
          argument, but there isn't (spotted by Henrik Krohns).
        - the naked truth about Tk - it's basically unmaintained.

4.32 Mon Nov  3 22:46:32 CET 2008
	- fix AnyEvent::Socket::resolve_sockaddr to properly support
          unix sockets again and choose a proper default for
          the socket type.
        - fix call to resolve_sockaddr in tcp_connect.

4.31 Thu Oct 30 04:41:48 CET 2008
	- implemented AnyEvent::Handle->destroy method.
	- hint about unexpected effects in TLS mode.
        - speed up AnyEvent::Impl::Perl by using more arrays
          instead of hashes without the slightest loss of readability :)
        - work around a perl argument refcounting bug.
        - with some perl patches applied, AnyEvent now seems leak-free.

4.3  Fri Oct  3 09:18:43 CEST 2008
	- AnyEvent will now install a no-op signal handler for SIGPIPE,
          unless one has been installed already.
        - warn about not loaidng AnyEvent::Impl::POE early enough
          (patch by Adam Rosenstein).
	- fixed a great number of bugs and corner cases in AnyEvent::Handle:
        - fix a bug in where in SSL connect mode, the
          client would first wait for some data by the server and
          otherwise hang. (reported and analyzed in an absolutely
          exemplary manner by Adam Rosenstein).
        - fix a bug in where SSL EOF would not be treated
          as stream EOF, putting the connection into a hung state.